# SomeLibDemo

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  readme.md  run.sh
cpp/: CMakeLists.txt  adder.cpp  adder.h
